--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <meta type>
         <script type="text/javascript" src="./js/index.js"></script>"
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="./index.css">
     </head>
 <body>
     <h1 id="title">Split Scan</h1>
