--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <meta type>
-        <script type="text/javascript" src="./js/index.js"></script>"
+        <script type="text/javascript" src="./js/index.js"></script>
         <link rel="stylesheet" href="./index.css">
     </head>
-<body>
-    <h1 id="title">Split Scan</h1>
+<body id="body">
+    <h1 id="title">Split Scan V0.1</h1>
     <p id="description">A tool for splitting a single image scan containing multiple images into separate cropped images.</p>
 
-    <input type="file" id="input" multiple />
+    <input type="file" id="input" />
     <p>name: <span id="file-name">____</span> <br/> type: <span id="file-type">____</span> <br/> size: <span id="file-size">____</span></p>
     <h2>Preview</h2>
     <img id="image-preview"/>
