--- a/index.html
+++ b/index.html
@@ -5,35 +5,38 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <script type="text/javascript" src="./js/index.js"></script>
         <link rel="stylesheet" href="./index.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela+Round">
     </head>
 <body id="body">
-    <h1 id="title">Split Scan V0.1.2</h1>
-    <p id="description">A tool for splitting a single image scan containing multiple images into separate cropped images.</p>
-
-    <input type="file" id="input" />
-    <p>name: <span id="file-name">____</span> <br/> type: <span id="file-type">____</span> <br/> size: <span id="file-size">____</span></p>
+    <h1 id="title">Split Scan V0.1.3</h1>
+    <p id="description">
+        A tool for splitting a single image into separate cropped images. <br/>
+        It runs entirely in your browser, no uploading necessary! <br/>
+        See how it works at <br/>
+        <a href="https://github.com/jpaoad31/SplitScan">GitHub</a>
+    </p>
+    <button id="reload-button" onclick="window.location.reload()" style="display: none">New Image</button>
+    <input type="file" id="input"/>
     <h2>Original Image</h2>
-    <p> If the original image isn't showing, reload the page and try again.</p>
     <img id="image-preview"/>
     <p> Status: <span id="preview-status"></span></p>
     <h2>Split Images</h2>
-    <p>note that they won't be squashed, that's just the preview</p>
     <div class="canvas-container">
         <div class="canvas-box">
             <canvas id="canvas0"></canvas>
-            <button id="dl0">Download</button>
+            <button id="dl0" style="display: none">Download 0</button>
         </div>
         <div class="canvas-box">
             <canvas id="canvas1"></canvas>
-            <button id="dl1">Download</button>
+            <button id="dl1" style="display: none">Download 1</button>
         </div>
         <div class="canvas-box">
             <canvas id="canvas2"></canvas>
-            <button id="dl2">Download</button>
+            <button id="dl2" style="display: none">Download 2</button>
         </div>
         <div class="canvas-box">
             <canvas id="canvas3"></canvas>
-            <button id="dl3">Download</button>
+            <button id="dl3" style="display: none">Download 3</button>
         </div>
     </div>
 </body>
