--- a/index.html
+++ b/index.html
@@ -8,18 +8,22 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela+Round">
     </head>
 <body id="body">
-    <h1 id="title">Split Scan V0.1.3</h1>
+    <h1 id="title">Split Scan V0.1.4</h1>
+    <div>by John P. Adams</div>
     <p id="description">
         A tool for splitting a single image into separate cropped images. <br/>
         It runs entirely in your browser, no uploading necessary! <br/>
         See how it works at <br/>
-        <a href="https://github.com/jpaoad31/SplitScan">GitHub</a>
+        <button onclick="window.location.href='https://github.com/jpaoad31/SplitScan'">GitHub</button>
     </p>
+
+    <div>
+        <input type="file" id="input"/>
+    </div>
     <button id="reload-button" onclick="window.location.reload()" style="display: none">New Image</button>
-    <input type="file" id="input"/>
-    <h2>Original Image</h2>
+    <h2>Original Image</h2> 
     <img id="image-preview"/>
-    <p> Status: <span id="preview-status"></span></p>
+    <p> Status: <span id="preview-status"> waiting </span></p>
     <h2>Split Images</h2>
     <div class="canvas-container">
         <div class="canvas-box">
